fix styling issue by hiding y-overflow

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  min-height: 4vh;
   justify-content: space-around;
   transition: 0.4s ease-in-out;
   background-color: rgb(232, 129, 61);
