--- a/src/components/GameBtns/GameBtns.scss
+++ b/src/components/GameBtns/GameBtns.scss
@@ -10,9 +10,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-bottom: 10px;
 
   .btn-play {
-    // background-color: var(--bisque);
     background: -webkit-linear-gradient(
       0deg,
       bisque 50%,
