--- a/src/components/RockPaperScissors/RockPaperScissors.scss
+++ b/src/components/RockPaperScissors/RockPaperScissors.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  flex-grow: 1;
+  min-height: 95vh;
 
   .title-container {
     display: flex;
