--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   background-color: sandybrown;
+  overflow-y: hidden; /* Prevent horizontal scrolling */
 }
 
 .rps-app {
